@@ -5,10 +5,15 @@ import static org.junit.jupiter.api.Assertions.assertNotSame;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Stream;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.NullAndEmptySource;
 
 public class TagCollectionTest {
     @Test
@@ -19,22 +24,19 @@ public class TagCollectionTest {
         assertEquals(List.of("red", "blue", "green"), result);
     }
 
-    @Test
-    @DisplayName("コンストラクタの異常系（nullリスト）")
-    void nullListExceptionTest() {
-        assertThrows(IllegalArgumentException.class, () -> new TagCollection(null));
+    @ParameterizedTest(name = "{index} - {2}")
+    @MethodSource("provideInvalidTagLists")
+    @DisplayName("コンストラクタの異常系テスト（nullリスト、nullタグ、空白タグ）")
+    void constructorThrowsExceptionForInvalidInputs(List<String> input, Class<? extends Throwable> expectedException, String description) {
+        assertThrows(expectedException, () -> new TagCollection(input));
     }
 
-    @Test
-    @DisplayName("コンストラクタの異常系（nullタグ含む）")
-    void containsNullTagExceptionTest() {
-        assertThrows(NullPointerException.class, () -> new TagCollection(List.of("red", null, "green")));
-    }
-
-    @Test
-    @DisplayName("コンストラクタの異常系（空白文字タグ含む）")
-    void containsBlankTagExceptionTest() {
-        assertThrows(IllegalArgumentException.class, () -> new TagCollection(List.of("red", "   ", "green")));
+    static Stream<org.junit.jupiter.params.provider.Arguments> provideInvalidTagLists() {
+        return Stream.of(
+            org.junit.jupiter.params.provider.Arguments.of(null, IllegalArgumentException.class, "nullリスト"),
+            org.junit.jupiter.params.provider.Arguments.of(Arrays.asList("red", null, "green"), IllegalArgumentException.class, "nullタグ含む"),
+            org.junit.jupiter.params.provider.Arguments.of(List.of("red", "   ", "green"), IllegalArgumentException.class, "空白タグ含む")
+        );
     }
 
     @Test
@@ -47,18 +49,12 @@ public class TagCollectionTest {
         assertEquals(List.of("red", "blue"), added.getTags());
     }
 
-    @Test
-    @DisplayName("addメソッドの異常系（nullタグ）")
-    void addNullTagExceptionTest() {
+    @ParameterizedTest
+    @NullAndEmptySource
+    @DisplayName("addメソッドの異常系（nullタグ、空白文字タグ）")
+    void addNullOrEmptyTagTest(String input) {
         TagCollection original = new TagCollection(List.of("red"));
-        assertThrows(IllegalArgumentException.class, () -> original.add(null));
-    }
-
-    @Test
-    @DisplayName("addメソッドの異常系（空白文字タグ）")
-    void addBlankTagExceptionTest() {
-        TagCollection original = new TagCollection(List.of("red"));
-        assertThrows(IllegalArgumentException.class, () -> original.add("   "));
+        assertThrows(IllegalArgumentException.class, () -> original.add(input));
     }
 
     @Test
@@ -88,17 +84,11 @@ public class TagCollectionTest {
         assertSame(tags, result);
     }
 
-    @Test
-    @DisplayName("removeメソッドの異常系（nullタグ）")
-    void removeNullTagExceptionTest() {
+    @ParameterizedTest
+    @NullAndEmptySource
+    @DisplayName("removeメソッドの異常系（nullタグ、空白文字タグ）")
+    void removeNullOrEmptyTagTest(String input) {
         TagCollection tags = new TagCollection(List.of("red"));
-        assertThrows(IllegalArgumentException.class, () -> tags.remove(null));
-    }
-
-    @Test
-    @DisplayName("removeメソッドの異常系（空白文字タグ）")
-    void removeBlankTagExceptionTest() {
-        TagCollection tags = new TagCollection(List.of("red"));
-        assertThrows(IllegalArgumentException.class, () -> tags.remove("   "));
+        assertThrows(IllegalArgumentException.class, () -> tags.remove(input));
     }
 }
